--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
+*{
+  margin: 0px;
+  padding: 0px;
+}
 body{
   background: #FFFAFA;
   font-family: 'Roboto', sans-serif;
