--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 header{
-  background: #556B2F;
+  background: #186a3b;
   color: #FFFAFA;
   padding: 1em 0;
   position: relative;
@@ -35,7 +35,7 @@ header:after{
 }
 
 .logo span{
-  color: #4a235a;
+  color: crimson;
   font-weight: 300;
 }
 
@@ -44,6 +44,12 @@ header:after{
   top: 100%;
   right: 0;
   background: #8FBC8F;
+  height: 0px;
+  overflow: hidden;
+}
+
+.web-nav--open{
+  height: auto;
 }
 
 .web-nav ul{
@@ -53,100 +59,48 @@ header:after{
 }
 
 .web-nav li{
-  border-bottom: 1px solid #b2d1c7;
+  border-bottom: 1px solid #186a3b ;
+}
+
+.web-nav li:last-child{
+  border-bottom: none;
 }
 
 .web-nav a{
-  color: #bfd2cc;
+  color: #556B2F;
   text-decoration: none;
   display: block;
   padding: 2em 6em;
   text-transform: uppercase;
 }
 
-/* tips sidene*/
-/*drying*/
-
-.drying-container{
-  display: flex;
-  margin-top:130px;
-  margin-left: 70px;
-  width: 70%;
+.web-nav a:hover,
+.web-nav a:focus{
+  background: #FFF5EE;
+  color: #186a3b;
 }
 
-.drying-text{
-  margin-left: 50px;
-  padding-top: 30px;
-  color: #4B4A4A;
-}
-.drying-text h2{
-  text-align: center;
-  font-size: 32px;
-  font-weight: bolder;
+.menu-toggle{
+  padding: 1em;
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  cursor: pointer;
 }
 
-.drying-text p{
-  font-weight: bold;
-  margin-top:25px;
-  font-size: 22px;
+.burger, .burger::before, .burger::after{
+  content: '';
+  display: block;
+  background: #FFFAFA;
+  height: 3px;
+  width: 1.75em;
+  border-radius: 3px;
 }
 
-/*label*/
-
-.label-container{
-  display: flex;
-  margin-top:130px;
-  margin-left: 70px;
-  width: 70%;
+.burger::before{
+  transform: translateY(-6px);
 }
 
-.label-img {
-  width: 600px;
-  height: 400px;
-}
-
-.label-text{
-  margin-left: 50px;
-  padding-top: 60px;
-  color: #4B4A4A;
-}
-.label-text h2{
-  text-align: center;
-  font-size: 32px;
-  font-weight: bolder;
-}
-
-.label-text p{
-  font-weight: bold;
-  margin-top:25px;
-  font-size: 22px;
-}
-
-/*organizing*/
-.organizing-container{
-  display: flex;
-  margin-top:130px;
-  margin-left: 70px;
-  width: 70%;
-}
-
-.organizing-img {
-  width: 600px;
-  height: 400px;
-}
-
-.organizing-text{
-  margin-left: 50px;
-  padding-top: 60px;
-  color: #4B4A4A;
-}
-.organizing-text h2{
-  font-size: 32px;
-  font-weight: bolder;
-}
-
-.organizing-text p{
-  font-weight: bold;
-  margin-top:25px;
-  font-size: 22px;
+.burger::after{
+  transform: translateY(3px);
 }
