--- a/style.css
+++ b/style.css
@@ -2,108 +2,149 @@
 *{
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 body{
   background: #FFFAFA;
   font-family: 'Roboto', sans-serif;
 }
 
-.container{
-  width: 95%;
-  max-width: 1000px;
-  margin: 0 auto;
-}
+/* Nav 2.0 */
 
-header{
-  background: #186a3b;
-  color: #FFFAFA;
-  padding: 1em 0;
-  position: relative;
-}
-
-header:after{
-  content: '';
-  clear: both;
-  display: block;
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 10vh;
+  background-color: #186a3b;
 }
 
 .logo{
-  float: left;
-  font-size: 1rem;
-  margin: 0;
-  font-weight: 700;
+  color: #d4e6f1;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 28px;
 }
 
 .logo span{
-  color: crimson;
   font-weight: 300;
+  text-transform: lowercase;
 }
 
-.web-nav{
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background: #8FBC8F;
-  height: 0px;
-  overflow: hidden;
+.logo i{
+  color: #000;
 }
 
-.web-nav--open{
-  height: auto;
+.nav-links{
+  display: flex;
+  width: 40%;
+  justify-content: space-around;
 }
 
-.web-nav ul{
-  margin: 0;
-  padding: 0;
+.nav-links li{
   list-style: none;
 }
 
-.web-nav li{
-  border-bottom: 1px solid #186a3b ;
-}
-
-.web-nav li:last-child{
-  border-bottom: none;
-}
-
-.web-nav a{
-  color: #556B2F;
+.nav-links a{
+  color: #d4e6f1;
   text-decoration: none;
-  display: block;
-  padding: 2em 6em;
-  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 15px;
 }
 
-.web-nav a:hover,
-.web-nav a:focus{
+/**/
+
+
+
+
+/*
+.nav-links a:hover,
+.nav-links a:focus{
   background: #FFF5EE;
   color: #186a3b;
-}
+  height: 100%;
+  width: 100%;
+}*/
 
-.menu-toggle{
-  padding: 1em;
-  position: absolute;
-  top: 0.5em;
-  right: 0.5em;
+.hamburger{
+  display: none;
   cursor: pointer;
 }
 
-.burger, .burger::before, .burger::after{
-  content: '';
-  display: block;
-  background: #FFFAFA;
-  height: 3px;
-  width: 1.75em;
-  border-radius: 3px;
+.hamburger div{
+  width: 25px;
+  height: 2px;
+  background-color: #d4e6f1;
+  margin: 6px;
+  transition: all 0.3s ease;
 }
 
-.burger::before{
-  transform: translateY(-6px);
+@media screen and (max-width: 1024px) {
+  .nav-links{
+    width: 60%;
+  }
 }
 
-.burger::after{
-  transform: translateY(3px);
+@media screen and (max-width: 768px) {
+
+  body{
+    overflow-x: hidden;
+  }
+
+  .nav-links{
+    position: absolute;
+    right: 0px;
+    height: 90vh;
+    top: 10vh;
+    background-color: /*#186a3b*/ #8FBC8F;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li{
+    opacity: 0;
+  }
+
+  .hamburger{
+    display: block;
+  }
 }
+
+.nav-active{
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+
+  from{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1{
+  transform: rotate(-45deg) translate(-5px,6px);
+}
+
+.toggle .line2{
+  opacity: 0;
+}
+
+.toggle .line3{
+  transform: rotate(45deg) translate(-5px,-6px);
+}
+
+/* End Nav 2.0 */
 
 /*shoppinglist*/
 
