--- a/style.css
+++ b/style.css
@@ -155,13 +155,106 @@ nav{
 
 /* End Nav 2.0 */
 
+/*TIPS*/
+/*DRYING*/
+
+.drying-container{
+  display: flex;
+  margin-top:130px;
+  margin-left: 70px;
+  width: 80%;
+}
+
+.drying-img {
+  width: 600px;
+  height: 400px;
+}
+
+.drying-text{
+  margin-left: 70px;
+  padding-top: 60px;
+  color: #4B4A4A;
+}
+.drying-text h2{
+  padding-left: 170px;
+  font-size: 32px;
+  font-weight: bolder;
+}
+
+.drying-text p{
+  font-weight: bold;
+  margin-top:25px;
+  font-size: 22px;
+}
+
+/*LABEL*/
+
+.label-container{
+  display: flex;
+  margin-top:130px;
+  margin-left: 70px;
+  width: 80%;
+}
+
+.label-img {
+  width: 600px;
+  height: 400px;
+}
+
+.label-text{
+  margin-left: 50px;
+  padding-top: 60px;
+  color: #4B4A4A;
+}
+.label-text h2{
+  text-align: center;
+  font-size: 32px;
+  font-weight: bolder;
+}
+
+.label-text p{
+  font-weight: bold;
+  margin-top:25px;
+  font-size: 22px;
+}
+
+/* ORGANIZING*/
+
+.organizing-container{
+  display: flex;
+  margin-top:130px;
+  margin-left: 70px;
+  width: 80%;
+}
+
+.organizing-img {
+  width: 600px;
+  height: 400px;
+}
+
+.organizing-text{
+  margin-left: 70px;
+  padding-top: 60px;
+  color: #4B4A4A;
+}
+.organizing-text h2{
+  text-align: center;
+  font-size: 32px;
+  font-weight: bolder;
+}
+
+.organizing-text p{
+  font-weight: bold;
+  margin-top:25px;
+  font-size: 22px;
+}
 /*shoppinglist*/
 
 .shoppinglist-container{
   display: flex;
   margin-top:130px;
   margin-left: 70px;
-  width: 70%;
+  width: 80%;
 }
 
 .shoppinglist-img {
@@ -170,7 +263,7 @@ nav{
 }
 
 .shoppinglist-text{
-  margin-left: 50px;
+  margin-left: 70px;
   padding-top: 60px;
   color: #4B4A4A;
 }
@@ -192,7 +285,7 @@ nav{
   display: flex;
   margin-top:130px;
   margin-left: 70px;
-  width: 70%;
+  width: 80%;
 }
 
 .vacuum-img {
@@ -201,7 +294,7 @@ nav{
 }
 
 .vacuum-text{
-  margin-left: 50px;
+  margin-left: 70px;
   padding-top: 60px;
   color: #4B4A4A;
 }
@@ -221,8 +314,8 @@ nav{
 .smoothie-container{
   display: flex;
   margin-top:130px;
-  margin-left: 70px;
-  width: 70%;
+  margin-left: 90px;
+  width: 80%;
 }
 
 .smoothie-img {
@@ -231,7 +324,7 @@ nav{
 }
 
 .smoothie-text{
-  margin-left: 50px;
+  margin-left: 90px;
   padding-top: 60px;
   color: #4B4A4A;
 }
