--- a/style.css
+++ b/style.css
@@ -619,12 +619,12 @@ html{
   scroll-behavior: smooth;
 }
 
-.scroll, .scroll:before{
+.scroll-b, .scroll-b:before{
   position: absolute;
   left: 50%;
 }
 
-.scroll{
+.scroll-b{
   width: 50px;
   height: 70px;
   margin-left: -20px;
@@ -635,7 +635,7 @@ html{
   cursor: pointer;
 }
 
-.scroll:before{
+.scroll-b:before{
   content: '';
   width: 8px;
   height: 8px;
@@ -645,14 +645,14 @@ html{
   border-radius: 4px;
   animation-duration: 1.9s;
   animation-iteration-count: infinite;
-  animation-name: down;
+  animation-name: downtwo;
 }
 
-.scroll:hover{
+.scroll-b:hover{
   background: #FFFAFA;
 }
 
-@keyframes down {
+@keyframes downtwo {
   0%{
     opacity: 1;
   }
@@ -663,7 +663,7 @@ html{
 }
 
 @media screen and (max-width: 700px) {
-  .scroll{
+  .scroll-b{
     display: none;
   }
 }
