--- a/style.css
+++ b/style.css
@@ -1241,11 +1241,13 @@ html{
   color: #1d322b;
   line-height: 1.5;
   text-align: center;
+  font-size: 16px;
 }
 .contact-container form {
   padding-top: 50px;
   padding-left: 350px;
   padding-right: 300px;
+  font-size: 14px;
 }
 
 input[type=text], select, textarea {
