--- a/style.css
+++ b/style.css
@@ -1274,6 +1274,39 @@ input[type=submit]:hover {
   background-color: #ccb8a8;
   color: #1d322b;
 }
+/* about page */
+.about-container {
+  background-color: #9ebc99;
+  color: #1d322b;
+  padding-left: 150px;
+  padding-right: 300px;
+  position: absolute;
+  padding-top: 5px;
+  height: 100vh;
+  width: 100%;
+  top: 10%;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.about-container h1 {
+  padding-top: 100px;
+  padding-bottom: 20px;
+  font-size: 40px;
+}
+.about-container h2, p, h3 {
+  line-height: 1.5;
+  padding-bottom: 20px;
+}
+.about-container h2 {
+  font-size: 20px;
+}
+.about-container h3 {
+  font-size: 16px;
+}
+.about-container p {
+  font-size: 14px;
+}
+
 
 /* footer */
 .content-footer {
