--- a/style.css
+++ b/style.css
@@ -1165,7 +1165,6 @@ input[type=submit]:hover {
   font-size: 14px;
 }
 
-
 .container {
   border-radius: 5px;
   background-color: #9ebc99;
@@ -1178,6 +1177,38 @@ input[type=submit]:hover {
   justify-content: flex-start;
   flex-direction: column;
 }
+.contact-container {
+  border-radius: 5px;
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 100vh;
+  width: 100%;
+  top: 10%;
+  line-height: 1.5;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.contact-container h2 {
+  padding-left: 300px;
+  padding-right: 350px;
+  padding-top: 50px;
+  text-align: center;
+}
+.contact-container h2 {
+  font-size: 16px;
+  text-align: center;
+}
+.contact-container label {
+  font-size: 14px;
+}
+.contact-container form {
+  padding-left: 300px;
+  padding-right: 350px;
+  padding-top: 20px;
+}
+
 
 /* footer */
 .content-footer {
