--- a/style.css
+++ b/style.css
@@ -1268,3 +1268,21 @@ input[type=submit]:hover {
 }
 
 /* End Organize - tips */
+
+/*app*/
+
+.app-img{
+  background-color: blue;
+  margin-top: 120px;
+  margin-left: 165px;
+}
+
+.app-text {
+  width: 1150px;
+  margin-top: 30px;
+  margin-left: 165px;
+}
+
+.app-text p{
+  margin-bottom:10px;
+}
