--- a/style.css
+++ b/style.css
@@ -405,8 +405,9 @@ a i{
 
 .picture-wrapper img{
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 511px;
+  width: 236px;
+  margin-left: 200px;
 }
 
 .h-wrapper{
@@ -643,6 +644,74 @@ a i{
   left: 82%;
   transform: translate(-82%, -83%);
 }
+
+@media screen and (max-width: 1100px) {
+  .picture-wrapper{
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -85%);
+    height: 40%;
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+
+
+  .header li{
+    float: left;
+  }
+
+  .header li a{
+    padding: 30px 30px;
+    padding-left: 0px;
+
+  }
+
+  .header ul a:hover{
+    background: transparent;
+    color: #ccb8a8;
+  }
+
+  .header ul a::before{
+  content: '';
+  display: block;
+  height: 2px;
+  background: #ccb8a8;
+  position: relative;
+  top: 25px;
+  width: 0%;
+  transition: all ease-in-out 200ms;
+  }
+
+  .header ul a:hover::before{
+    width: 100%;
+  }
+
+  .header .menu{
+    clear: none;
+    float: right;
+    max-height: none;
+    min-height: none;
+    line-height: normal;
+  }
+
+  .picture-wrapper{
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -85%);
+    height: 40%;
+    width: 80%;
+  }
+}
+@media screen and (max-width: 770px) {
+  .header ul a{
+    display: none;
+    padding: 20px;
+    text-decoration: none;
+  }
+}
+
 
 @media screen and (max-width: 700px) {
   .content-main{
