--- a/style.css
+++ b/style.css
@@ -772,7 +772,7 @@ a i{
 
 .tips-container{
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background: #1d322b;
   background-position: center;
   background-size: cover;
@@ -790,9 +790,9 @@ a i{
 
 .tips-col h1{
   color: #FFFAFA;
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 100;
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 
 .tips-col p{
@@ -1477,10 +1477,31 @@ html{
 
 
 /*app*/
-
+.app-container {
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 130vh;
+  width: 100%;
+  top: 10%;
+  justify-content: flex-start;
+  flex-direction: column;
+  line-height: 1.5;
+}
+.app-container h1 {
+  color: #1d322b;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.app-container p {
+  font-size: 14px;
+}
 .app-img{
-  margin-top: 120px;
   margin-left: 165px;
+  border-radius: 2px;
 }
 
 .app-text {
@@ -1526,6 +1547,7 @@ html{
   padding-top: 50px;
   padding-left: 350px;
   padding-right: 300px;
+  font-size: 14px;
 }
 /* contact contact-form */
 input[type=text], select, textarea {
